<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadClientes">

    <Button
        android:id="@+id/btCliente_Cadastrar"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:background="@color/colorPrimary"
        android:text="@string/cadastrar"
        android:textColor="@color/font_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CPFCLiente_Cadastrar" />

    <EditText
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:id="@+id/NomeCliente_Cadastrar"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/SobrenomeCliente_Cadastrar"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/SobrenomeCliente_Cadastrar"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="181dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/sobrenome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/NomeFunc_Cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/CPFCLiente_Cadastrar"
        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
        android:layout_width="363dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SobrenomeCliente_Cadastrar"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="152dp"
        android:layout_height="147dp"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/img_cliente_icon_524x524"
        tools:srcCompat="@tools:sample/avatars[11]" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:text="@string/cadastrar_novo_cliente"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>